[package]
name = "attractorr"
version = "0.6.2"
authors = ["Raphael Nestler <raphael.nestler@gmail.com>"]
edition = "2021"
rust-version = "1.74"
description = "A CLI tool to scrape the web for magnet links"
repository = "https://github.com/rnestler/attractorr/"
license = "MIT OR Apache-2.0"
keywords = ["cli", "torrent", "magnet"]
categories = ["command-line-utilities"]

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
bytesize = "1.3.0"
bytes = "1.7.0"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.6", features = ["full"] }
http-body-util = "0.1.2"
hyper-tls = "0.6.0"
clap = { version = "4.5.16", features = ["help", "usage", "error-context", "std", "derive"], default_features = false }
termcolor = "1.3.0"
is-terminal = "0.4.10"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
env_logger = "0.11.5"
log = "^0.4"
async-trait = "^0.1.81"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
percent-encoding = "^2.1.0"
futures-util = "0.3.30"
torrent_search = "0.3"
yts-api = "0.4"
