[package]
name = "attractorr"
version = "0.7.0"
authors = ["Raphael Nestler <raphael.nestler@gmail.com>"]
edition = "2024"
rust-version = "1.85"
description = "A CLI tool to scrape the web for magnet links"
repository = "https://github.com/rnestler/attractorr/"
license = "MIT OR Apache-2.0"
keywords = ["cli", "torrent", "magnet"]
categories = ["command-line-utilities"]

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
bytesize = "2.3.1"
bytes = "1.11.0"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.19", features = ["full"] }
http-body-util = "0.1.3"
hyper-tls = "0.6.0"
clap = { version = "4.5.56", features = ["help", "usage", "error-context", "std", "derive"], default-features = false }
termcolor = "1.3.0"
is-terminal = "0.4.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
env_logger = "0.11.6"
log = "^0.4"
async-trait = "^0.1.89"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
percent-encoding = "^2.3.2"
futures-util = "0.3.31"
torrent_search = "0.3"
yts-api = "0.4"
